@@ -116,7 +116,7 @@ class DolGraph
 		$this->datacolor = array(array(120,130,150), array(160,160,180), array(190,190,220));
 		$this->bgcolor = array(235,235,224);
 
-		$color_file = DOL_DOCUMENT_ROOT.'/theme/'.$conf->theme.'/graph-color.php';
+		$color_file = DOL_DOCUMENT_ROOT.'/theme/'.$conf->theme.'/theme_vars.inc.php';
 		if (is_readable($color_file))
 		{
 			include_once $color_file;
