@@ -16,6 +16,8 @@ Following changes may create regressions for some external modules, but were nec
 * Method GetUrlTrackingStatus were renamed into getUrlTrackingStatus for consistency with naming rules.
 * API getListOfCivility has been renamed into getListOfCivilities for consistency with naming rules.
 * Deprecated function img_phone as been removed. You can use img_picto(..., 'call|call_out') instead.; 
+* Files for variables of themes were renamed from graph-color.php into theme_vars.inc.php to match naming 
+  convention of extension .inc.php for files to be included.
 
 
 ***** ChangeLog for 9.0.1 compared to 9.0.0 *****
